import java.util.Properties

plugins {
    id 'java-gradle-plugin'
    id 'maven-publish'
    id 'com.gradle.plugin-publish' version '1.3.1'
}

def rootProps = new Properties()
rootProps.load(new FileInputStream(file('../gradle.properties')))

group = 'io.llmcompactor'
def pluginVersion = findProperty('pluginVersion') ?: rootProps['pluginVersion']
version = pluginVersion

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation "io.llmcompactor:core:${version}"
    compileOnly 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
}

gradlePlugin {
    website = 'https://github.com/sfkamath/llm-build-compactor'
    vcsUrl = 'https://github.com/sfkamath/llm-build-compactor'

    plugins {
        llmCompactor {
            id = 'io.llmcompactor.gradle'
            implementationClass = 'io.llmcompactor.gradle.LlmCompactorPlugin'
            displayName = 'LLM Build Compactor'
            description = 'Compact build output for LLM-assisted development'
        }
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

def generatePluginProperties = tasks.register('generatePluginProperties') {
    def outputDir = layout.buildDirectory.dir('generated/resources/plugin-properties')
    outputs.dir(outputDir)
    doLast {
        def dir = outputDir.get().asFile
        dir.mkdirs()
        new File(dir, 'llm-compactor-plugin.properties').text = "version=${project.version}\n"
    }
}

sourceSets.main.resources.srcDir(generatePluginProperties)
